# cspl

./: .cpro.json  .cpro_metadata.json  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.cpro/temp/: temp.txt
src/: .clang-format  CMakeLists.txt  cspl.cpp  cspl.hpp  log.hpp  main.cpp  run_config.cpp  run_config.hpp
src/dictionary/: custom_dictionary.cpp  custom_dictionary.hpp  dictionary.cpp  dictionary.hpp
src/processing/: char_filter.cpp  char_filter.hpp  char_iterator.hpp  char_sink.hpp  char_source.cpp  char_source.hpp  common.hpp  file_sink.hpp  file_source.cpp  file_source.hpp  filter_buffer.cpp  filter_buffer.hpp  hunspell_checker.cpp  hunspell_checker.hpp  hunspell_fixer.cpp  hunspell_fixer.hpp  item_iterator.hpp  item_sink.hpp  item_source.hpp  stdio_sink.hpp  stdio_source.cpp  stdio_source.hpp  word_converter.cpp  word_converter.hpp  word_sink.hpp  word_source.cpp  word_source.hpp
